# Isometric_Game_Engine

./: .clang-format  CMakeLists.txt  Doxyfile  README.md
doxygen_output/html/: _game_8hpp_source.html  _game___object___interface_8hpp_source.html  _grid_8hpp_source.html  _interfaces_8hpp_source.html  _man_8hpp_source.html  _scene_8hpp_source.html  _textures_8hpp_source.html  _thread___safe___queue_8hpp_source.html  _utility_8h_source.html  _window_8hpp_source.html  annotated.html  class_animated___texture-members.html  class_animated___texture.html  class_animated___texture__coll__graph.map  class_animated___texture__coll__graph.md5  class_animated___texture__inherit__graph.map  class_animated___texture__inherit__graph.md5  class_camera-members.html  class_camera.html  class_game-members.html  class_game.html  class_game___object___interface-members.html  class_game___object___interface.html  class_game___object___interface__inherit__graph.map  class_game___object___interface__inherit__graph.md5  class_grid-members.html  class_grid.html  class_grid___renderer-members.html  class_grid___renderer.html  class_grid___renderer__coll__graph.md5  class_grid___renderer__inherit__graph.map  class_grid__coll__graph.map  class_grid__coll__graph.md5  class_grid__inherit__graph.map  class_grid__inherit__graph.md5  class_man-members.html  class_man.html  class_man___renderer-members.html  class_man___renderer.html  class_man___renderer__coll__graph.map  (+61 more)
doxygen_output/latex/: annotated.tex  class_animated___texture.tex  class_animated___texture__coll__graph.md5  class_animated___texture__inherit__graph.md5  class_camera.tex  class_game.tex  class_game___object___interface.tex  (+27 more)
src/: CMakeLists.txt  Testing_Utilities.cpp  Testing_Utilities.hpp  main.cpp
src/engine/: Game.cpp  Game.hpp
src/engine/containers/: Thread_Safe_Queue.hpp
src/engine/graphics/: Basic_Renderers.cpp  Basic_Renderers.hpp  Interfaces.cpp  Interfaces.hpp  Textures.cpp  Textures.hpp  Utility.h
src/engine/objects/Man/: Man.cpp  Man.hpp
src/engine/scene/: Camera.cpp  Camera.hpp  Map.hpp  Scene.cpp  Scene.hpp
src/engine/scene/base_objects/: Game_Object_Interface.cpp  Game_Object_Interface.hpp  Grid.cpp  Grid.hpp
src/engine/window/: Window.cpp  Window.hpp  Window_Controller.hpp
(+20 files in other folders)
